# adventofcode

./: .gitignore  .rubocop.yml  Gemfile  Makefile  README.md  aoc.fish.example  bash_alias.example  config.fish.example  mise.toml  project.clj  requirements.txt  solution.py
2015/: day01-cl.ipynb  day01-clj.ipynb  day01-iex.ipynb  day01-ml.ipynb  day01-py.ipynb  day01-rb.ipynb  day01-rkt.ipynb  day01-ts.ipynb  day01.ipynb  day01.py  day02-clj.ipynb  day02-rkt.ipynb  day02.ipynb  day03-clj.ipynb  day03.ipynb  day04.ipynb  day04.nim  day05.ipynb  day06.ipynb  day07.ipynb  day08.ipynb  day09.ipynb  day10.ipynb  day11.ipynb  day12.ipynb  day13.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day20.ipynb  day21-rb.ipynb  day21.ipynb  day22-rb.ipynb  day23.ipynb  day24.ipynb  day25.ipynb
2016/: day01.ipynb  day02-rb.ipynb  day03-rb.ipynb  day04.rb  day05.ipynb  day05.rb  day06.rb  day07.rb  day08.ipynb  day08.rb  day09.ipynb  day10.ipynb  day11-py.ipynb  day11-rb.ipynb  day11.ipynb  day12-ts.ipynb  day12.ipynb  day13.ipynb  day14-js.ipynb  day14-kt.ipynb  day14.ipynb  day15.ipynb  day16.ipynb  day17-rb.ipynb  day17.ipynb  day18.ipynb  day19.ipynb  day20-py.ipynb  day20.ipynb  day21.ipynb  day22-rb.ipynb  day22.ipynb  day23.ipynb  day24-py.ipynb  day24-rb.ipynb  day25.ipynb  day5  day5.ipynb  day5.nim  md5tcc.tcl  (+3 more)
2017/: day01.ipynb  day03-ts.ipynb  day03.ipynb  day04.ipynb  day05.ipynb  day06-cr.ipynb  day06-rb.ipynb  day06.ipynb  day07-ex.ipynb  day07-rb.ipynb  (+33 more)
2019/lib/breakable/: CMakeLists.txt  breakable-0.1.tm  library.c  test.tcl
(+428 files in other folders)
